# pyapes

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
demos/: advection_diffusion.py  poisson.py
demos/advection_diffusion/: ss_advection_diffusion.ipynb
demos/poisson_equations/: axisymmetric.ipynb  pure_dirichlet.ipynb
docs/: Makefile  conf.py  index.rst  pyABC.core.rst  pyABC.solver.rst  pyABC.tools.rst
docs/_static/: custom.css
pyABC/: __init__.py
pyABC/class_rooms/: BOX_333.py
pyABC/core/: backend.py  boundaries.py  fields.py  mesh.py
pyABC/core/boundaries/: __init__.py  _boundaries.py
pyABC/core/geometry/: __init__.py  _box.py  _cylinder.py  basis.py  box.py  sphere.py
pyABC/core/mesh/: __init__.py  _mesh.py
pyABC/core/solver/: fdm.py  fluxes.py  fvm.py  linalg.py  ops.py  tools.py
pyABC/core/variables/: __init__.py  variables.py
pyABC/solver/: fdm.py  fluxes.py  fvm.py  operators.py
pyABC/testing/: poisson.py
pyABC/tools/: diagnostics.py  errors.py  progress.py  utils.py
pyapes/: __init__.py
pyapes/class_rooms/: BOX_333.py  ML_E_12.py
pyapes/core/: backend.py  runner.py
pyapes/core/boundaries/: _boundaries.py
pyapes/core/geometry/: _box.py  basis.py  box.py  cylinder.py
pyapes/core/mesh/: __init__.py  _mesh.py  tools.py
pyapes/core/solver/: fdc.py  fdm.py  fluxes.py  fv.py  fvc.py  fvm.py  fvm_wip.py  linalg.py  ops.py  tools.py
pyapes/core/variables/: __init__.py  bcs.py  fields.py  fluxes.py  variables.py
pyapes/geometry/: __init__.py  basis.py  box.py  cylinder.py
pyapes/mesh/: _mesh.py  tools.py
pyapes/solver/: fdc.py  fdm.py  linalg.py  ops.py  rfp.py  tools.py  types.py
pyapes/testing/: burgers.py  poisson.py
pyapes/tools/: diagnostics.py  progress.py  spatial.py  utils.py
pyapes/variables/: __init__.py  bcs.py  container.py  fields.py
tests/: test_diagnostics.py  test_fdm.py  test_field.py  test_fvc.py  test_fvm.py  test_linalg.py  test_mesh.py  test_mesh_objects.py  test_ops.py  test_solver.py  test_solver_fvc.py  test_solver_fvm.py  test_spatial.py  test_tools.py  test_variables.py
tests/data/: pots.h5
tests/data/laplace_equation/: sol_ref_10_by_10.csv
