[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:tensorboard[.*]"]

[tool.poetry]
name = "pyapes"
version = "0.2.13"
description = "Python Awesome Partial differential Equation Solver"
authors = ["Kyoungseoun Chung <kchung@student.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pymyplot = "^0.2.7"
torch = [
    { version = "^2.0.0", markers = "sys_platform=='darwin'" },
    { version = "^2.0.0", markers = "sys_platform=='win32'", source = "torch" },
]
pymytools = "^0.1.15"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^2.21.0"
jupyter = "^1.0.0"
notebook = "^6.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
